--- a/styles/Enunciado.module.css
+++ b/styles/Enunciado.module.css
@@ -1,6 +1,7 @@
 .enunciado{
     display: flex;
-    height: 100vh;
+    width: 100vw;
+    height: 35vh;
     justify-Content: center;
     align-Items: center
 }
