--- a/styles/Resposta.module.css
+++ b/styles/Resposta.module.css
@@ -1,13 +1,15 @@
 .resposta{
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 80%;
-    min-width: 500px;
-    height: 100px;
-    margin:10px;
+    height: 12vh;
+    margin:0.5vw 0;
 }
 
 .conteudoResposta{
     position: relative; 
+    justify-content: space-around;
     display: flex;
     flex: 1;
 }
@@ -21,8 +23,8 @@
 
 .frente{
     color: #000000;
-    border-radius: 5%;
-    padding: 1vw;
+    border-radius: 1.5vw;
+    padding: 2.5vw;
     align-items: center;
     background-color: #FFF;
 }
@@ -34,12 +36,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.3rem;
+    font-size: 1.3vw;
     font-weight: 700;
-    margin-right: 2rem;
+    margin-right: 5rem;
+    color: #FFF;
 }
 
 .valor{
     font-weight: 700;
-    font-size: 1.3rem;
+    font-size: 1.3vw;
 }
