--- a/styles/Resposta.module.css
+++ b/styles/Resposta.module.css
@@ -14,28 +14,26 @@
     flex: 1;
 }
 
-.frente, .verso{
+.frente, .verso {
     position: absolute;
     display: flex;
     height: 100%;
     width: 100%;
+    border-radius: 1.5vw;
+    align-items: center;
+    justify-content: center;
+    padding: 2.5vw;
+    flex: 1; 
 }
 
 .frente{
     color: #000;
-    border-radius: 1.5vw;
-    padding: 2.5vw;
-    align-items: center;
     background-color: #FFF;
 }
 
-.verso > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-    border-radius: 1.5vw;    
+.verso {
+    flex-direction: column;  
+     
 }
 
 .certa{
@@ -47,7 +45,10 @@
 }
 
 .certa .valor, .errada .valor {
-    font-size: 2rem;
+    font-size: 2rem; 
+    display: flex;
+    flex: 1;
+    
 }
 
 .letra{
