--- a/styles/Botao.module.css
+++ b/styles/Botao.module.css
@@ -7,4 +7,10 @@
     border:none;
     padding: 0.3vw 1vw;
     margin: 3vw ;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out 
+}
+
+.botao:hover{
+    transform: scale(1.1);
 }
